QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Tool/child windows position and size preservation fixed.

- The connections/patchbay auto-refresh option has been finally
  removed due to several user requests, although deprecated for
  quite some time now it has been the probable cause of some
  periodic xrun occurrences due to graph-locking in jackd (while
  making Geoff Beasley angry in the process:).

- Messages line limit was not being checked, now honored.

- Simple as it could ever be, the build executive summary report
  is now given on configure.

- Patchbay snapshot not gets socket and port ordering back.

- ALSA Sequencer support is now an optional feature on setup,
  preventing the annoying "MIDI patchbay will be not available"
  warning message, ruining window placement on Linux systems
  where the snd-midi-seq kernel module is not loaded or not
  favorable (eg. OSS) at startup (by request from Jussi Laako).

- Get configure to try and detect the correct qmake location and
  insert it the search order, so let the qt4 tools take precedence
  when --with-qt option is given and older qt3 ones coexist and
  are found located ahead in the PATH.

- The connections widget is now being properly refreshed, due to
  some quirk in the QTreeWidget which was preventing some items,
  specially the expanded ones, to disappear in the void. Meanwhile,
  with a hand from Stephane Letz, the client/port lookup method was
  changed to prevent duplicated, missing or worse, crashes due to
  weird behaved windows applications.

- The xrun count stats can now be reset simply by middle clicking
  on the systray icon or the main window's display area (thanks to
  patch sent by Dominic Sacre).

- An improved version of the "shiny" background image was issued.
  The original somehow looked like two different images put together,
  probably most apparent on a bright TFT screen (by Dominic Sacre).
