@@ -77,6 +77,7 @@ qjackctlSetup::qjackctlSetup (void)
 	sDisplayFont1            = m_settings.value("/DisplayFont1").toString();
 	sDisplayFont2            = m_settings.value("/DisplayFont2").toString();
 	bDisplayEffect           = m_settings.value("/DisplayEffect", true).toBool();
+	bDisplayBlink            = m_settings.value("/DisplayBlink", true).toBool();
 	iConnectionsIconSize     = m_settings.value("/ConnectionsIconSize", QJACKCTL_ICON_16X16).toInt();
 	sConnectionsFont         = m_settings.value("/ConnectionsFont").toString();
 	bQueryClose              = m_settings.value("/QueryClose", true).toBool();
@@ -163,6 +164,7 @@ qjackctlSetup::~qjackctlSetup (void)
 	m_settings.setValue("/DisplayFont1",            sDisplayFont1);
 	m_settings.setValue("/DisplayFont2",            sDisplayFont2);
 	m_settings.setValue("/DisplayEffect",           bDisplayEffect);
+	m_settings.setValue("/DisplayBlink",            bDisplayBlink);
 	m_settings.setValue("/ConnectionsIconSize",     iConnectionsIconSize);
 	m_settings.setValue("/ConnectionsFont",         sConnectionsFont);
 	m_settings.setValue("/QueryClose",              bQueryClose);
